[package]
name = "velopack"
readme = "README.md"
version.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
async = ["async-std"]
file-logging = ["log-panics", "simplelog", "time"]

[package.metadata.docs.rs]
features = ["async"]

[lib]
name = "velopack"
path = "src/lib.rs"

[dev-dependencies]
tempfile.workspace = true

[dependencies]
log.workspace = true
ureq.workspace = true
url.workspace = true
semver.workspace = true
xml.workspace = true
derivative.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
zip.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
regex.workspace = true
normpath.workspace = true
bitflags.workspace = true
rand.workspace = true
sha1.workspace = true
sha2.workspace = true
uuid.workspace = true

# async
async-std = { workspace = true, optional = true }

# file logging
log-panics = { workspace = true, optional = true }
simplelog = { workspace = true, optional = true }
time = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_Foundation", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[target.'cfg(unix)'.dependencies]
libc.workspace = true
