[package]
name = "velopack_uniffi"
publish = false
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "velopack_uniffi"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
uniffi.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
