[package]
name = "velopack_nodeffi"
exclude = ["index.node"]
publish = false
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
velopack.workspace = true
serde_json.workspace = true
semver.workspace = true
log.workspace = true
simplelog.workspace = true
lazy_static.workspace = true
neon.workspace = true

[build-dependencies]
velopack = { workspace = true, features = ["typescript"] }
ts-rs.workspace = true