[package]
name = "velopack_nodeffi"
version = "0.1.0"
license = "MIT"
edition = "2021"
exclude = ["index.node"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = "1"
serde_json = "1"
velopack = { path = "../../../lib-rust" }

[build-dependencies]
ts-rs = "9"
velopack = { path = "../../../lib-rust" }